# phf-benchmark

./: Cargo.toml  README.md
phf_benchmark/: Cargo.toml  build.rs
phf_benchmark/benches/: chd.rs
phf_benchmark/src/: lib.rs
phf_chd/: Cargo.toml
phf_chd/src/: generate.rs  lib.rs
phf_chd/test/: Cargo.toml  build.rs
phf_chd/test/src/: lib.rs
phf_chd/tests/: entry_10k.rs  entry_multiple.rs  entry_one.rs
phf_chd/tests/shared/: mod.rs
phf_shared/: Cargo.toml
phf_shared/src/: hash.rs  lib.rs
src/: lib.rs  main.rs
src/chd/: generate.rs  mod.rs
