[workspace]
members = ["phf_chd", "phf_chd/test", "phf_shared"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
repository = "https://github.com/astral4/phf-benchmark"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
rand = { version = "0.8.5", default-features = false, features = ["alloc", "min_const_gen", "small_rng"] }
