[package]
name = "phf_shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Common items used by PHF algorithm implementations"
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = ["runtime-rng"] }
hashbrown = "0.15.0"

[lints]
workspace = true
